<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/movinfo"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/batman"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movieInfoPoster"
                android:layout_width="150dp"
                android:layout_height="190dp"
                android:src="@drawable/img"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/hh" />

            <TextView
                android:id="@+id/nnn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/movieInfoPoster"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/movieInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batman"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/movieInfoPoster"
                android:layout_toEndOf="@+id/nnn"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/n4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nnn"
                android:layout_marginTop="10sp"
                android:text="@string/year"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/movieInfoYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2005"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/movieInfoName"
                android:layout_toEndOf="@+id/n4"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/n5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/n4"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/movieInfoDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luckas"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/movieInfoYear"
                android:layout_toEndOf="@+id/n5"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/n6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/n5"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/movieInfoDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_desc"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/movieInfoDirector"
                android:layout_toEndOf="@+id/n6"
                android:textSize="20sp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>